--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,10 +6,11 @@
 html, body {
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 }
 
-svg {
-	width: 100dvw;
-	height: 100dvh;
-	touch-action: none;
+#freehand-canvas{
+	background: none;
+	width: 100vw;
+	height: 100vh;
 }
