--- a/p5-js-build/style.css
+++ b/p5-js-build/style.css
@@ -15,9 +15,10 @@ canvas {
 }
 
 #lines-count{
+  color: white;
   position: absolute;
   z-index: 1;
-  transform: translateX(-50%);
-  left: 50%;
+  /* transform: translateX(-50%); */
+  right: 5%;
   font-family: 'Poppins';
 }
