--- a/vite-build/assets/css/index.css
+++ b/vite-build/assets/css/index.css
@@ -159,7 +159,7 @@ canvas{
 	display: flex;
 }
 #control-panel .brush-size{
-	width: 60px;
+	width: auto;
 	height: 60px;
 	background: none;
 	margin-left: 10px;
