--- a/vite-build/assets/css/index.css
+++ b/vite-build/assets/css/index.css
@@ -13,6 +13,7 @@
 	padding: 0;
 }
 html, body {
+	background: white !important;
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
@@ -58,7 +59,7 @@ canvas{
 /* control panel stylings */
 #control-panel{
 	display: flex;
-	background: #D9D9D9;
+	background: rgb(240, 240, 240);
 	position: absolute;
 	width: auto;
 	overflow-x: auto;
