--- a/vite-build/assets/css/index.css
+++ b/vite-build/assets/css/index.css
@@ -14,7 +14,7 @@
 }
 html, body {
 	background: white !important;
-	overflow: hidden;
+	overflow: hidden !important;
 	width: 100%;
 	height: 100%;
 	font-family: 'Nunito';
@@ -82,7 +82,7 @@ canvas{
 	width: 1px;
 	height: 60px;
 	background: black;
-	opacity: .2;
+	opacity: .15;
 	margin-left: 12px;
 	margin-right: 12px;
 }
@@ -109,7 +109,8 @@ canvas{
 #control-panel .brush-color p,
 #control-panel .brush-size p,
 #control-panel #eraser p,
-#control-panel #clear p{
+#control-panel #clear p,
+#control-panel #download p{
 	font-size: 10px;
 	font-weight: 600;
 	text-align: center;
@@ -187,6 +188,7 @@ canvas{
 }
 
 #control-panel #eraser{
+	cursor: pointer !important;
 	width: 60px;
 	height: 60px;
 	background: none;
@@ -202,6 +204,7 @@ canvas{
 }
 
 #control-panel #clear{
+	cursor: pointer !important;
 	width: 60px;
 	height: 60px;
 	background: none;
@@ -210,6 +213,21 @@ canvas{
 	position: relative;
 }
 #control-panel #clear img{
+	position: absolute;
+	transform: translate(-50%, -50%);
+	left: 50%;
+	top: 40%;
+}
+
+#control-panel #download{
+	width: 60px;
+	height: 60px;
+	background: none;
+	margin-left: 10px;
+	margin-right: 10px;
+	position: relative;
+}
+#control-panel #download img{
 	position: absolute;
 	transform: translate(-50%, -50%);
 	left: 50%;
