Update both client and screen projects

--- a/screen/assets/css/index.css
+++ b/screen/assets/css/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700;800&display=swap');
 
 /* 
 	Font family : 'Nunito'
@@ -13,7 +13,8 @@
 	padding: 0;
 }
 html, body {
-	overflow: hidden;
+	background: white !important;
+	overflow: hidden !important;
 	width: 100%;
 	height: 100%;
 	font-family: 'Nunito';
@@ -22,6 +23,7 @@ html, body {
 
 /* top bar stylings */
 #top-bar{
+	display: none;
 	background: none;
 	position: absolute;
 	top: 2%;
@@ -58,7 +60,8 @@ canvas{
 /* control panel stylings */
 #control-panel{
 	display: none;
-	background: #D9D9D9;
+	background: white;
+	box-shadow: 1px 1px 30px 10px rgba(0, 0, 0, 0.03);
 	position: absolute;
 	width: auto;
 	overflow-x: auto;
@@ -79,7 +82,7 @@ canvas{
 	width: 1px;
 	height: 60px;
 	background: black;
-	opacity: .3;
+	opacity: .15;
 	margin-left: 12px;
 	margin-right: 12px;
 }
@@ -88,6 +91,7 @@ canvas{
 	display: flex;
 }
 #control-panel .brush-type{
+	cursor: pointer !important;
 	width: 60px;
 	height: 60px;
 	background: none;
@@ -105,7 +109,8 @@ canvas{
 #control-panel .brush-color p,
 #control-panel .brush-size p,
 #control-panel #eraser p,
-#control-panel #clear p{
+#control-panel #clear p,
+#control-panel #download p{
 	font-size: 10px;
 	font-weight: 600;
 	text-align: center;
@@ -115,8 +120,8 @@ canvas{
 	left: 50%;
 	width: 100%;
 	text-transform: uppercase;
-	opacity: .7;
-
+	opacity: .5;
+	color: black;
 	white-space: nowrap;
 }
 
@@ -183,6 +188,7 @@ canvas{
 }
 
 #control-panel #eraser{
+	cursor: pointer !important;
 	width: 60px;
 	height: 60px;
 	background: none;
@@ -198,6 +204,7 @@ canvas{
 }
 
 #control-panel #clear{
+	cursor: pointer !important;
 	width: 60px;
 	height: 60px;
 	background: none;
@@ -210,5 +217,26 @@ canvas{
 	transform: translate(-50%, -50%);
 	left: 50%;
 	top: 40%;
+}
+
+#control-panel #download{
+	width: 60px;
+	height: 60px;
+	background: none;
+	margin-left: 10px;
+	margin-right: 10px;
+	position: relative;
+}
+#control-panel #download img{
+	position: absolute;
+	transform: translate(-50%, -50%);
+	left: 50%;
+	top: 40%;
+}
+
+.active-brush .name{
+	font-weight: 700;
+	opacity: 1 !important;
+	color: blue !important;
 }
 /* end of control panel stylings */
